--- a/p1.html
+++ b/p1.html
@@ -33,7 +33,7 @@
    </div>
    <nav>
    	<ul>
-   		<li><a href="p1.html">Strona Główna</a></li>
+   		<li><a href="/p1.html">Strona Główna</a></li>
 		<li><a href="/p2.html">Podsstrona 1</a></li>
 		<li><a href="/p3.html">Podstrona 2</a></li>
 		<li><a href="/p4.html">Podstrona 3</a></li>
@@ -92,6 +92,15 @@ Od oficera strażackiego wypada wiele wymagać, a przedewszystkiem bodaj on sam 
   
   </section>
   </div>
+     <div class="d-menu">
+   	<ul>
+   		<li><a href="p1.html">Strona Główna</a></li>
+		<li><a href="p2.html">Podsstrona 1</a></li>
+		<li><a href="p3.html">Podstrona 2</a></li>
+		<li><a href="p4.html">Podstrona 3</a></li>
+		<li><a href="p5.html">Podstrona 4</a></li>
+	</ul>
+   </div>
   <footer>
    		Emilian Pawłowski
    </footer>
